2003-05-22  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-muchy.el (shimbun-muchy-get-headers): Modify regexp
	slightly.

2003-05-21  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-jpo.el (shimbun-jpo-headers): Use `w3m-expand-url' to
	get full URL.
	(shimbun-jpo-headers-1): Ditto.
	Bug fixed.
	(shimbun-jpo-headers-group-details): Use `dolist' to simplify code.
	Use `w3m-expand-url' to	get full URL.
	
2003-05-19  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-jpo.el (shimbun-jpo-contents): Modify regexp to pick
	up email address properly.

2003-05-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-use-safe-url-regexp): New variable.
	(mew-w3m-view-inline-image, mew-mime-text/html-w3m): Use
	`mew-w3m-use-safe-url-regexp' for `w3m-safe-url-regexp'.

2003-05-18  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-yahoo.el (shimbun-yahoo-groups-alist): Add topnews
	group entry.

2003-05-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (Top): Use w3m-treat-drive-letter for
	`w3m-expand-path-name'.

2003-05-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yahoo.el (shimbun-yahoo-x-face-alist): New face.

2003-05-11  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-yahoo.el (shimbun-yahoo-content-start): Improved the
	default value.

2003-05-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-2ch.el (shimbun-headers): Correct the wrong use of
	`message'.  Thanks to Yoichi NAKAYAMA <yoichi@geiin.org> for his
	suggestion.

	* mime-w3m.el (mime-w3m-preview-text/html): Apply the patch posted
	by Yoichi NAKAYAMA <yoichi@geiin.org> in [emacs-w3m:04836], that
	correct the wrong usage of `message'.

2003-05-06  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-pocketgames.el
	(shimbun-pocketgames-make-mime-article): Modify regexp to pick up
	url properly.

2003-05-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify-anchors): Invalidate the widget keymap in
	XEmacs; add a help-echo to the widget button.