@@ -1,3 +1,8 @@
+2003-05-22  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3mhack.el (w3mhack-make-package): Make it work under non-Mule
+	XEmacs.
+
 2003-05-22  NAKAJIMA Mikio  <minakaji@namazu.org>
 
 	* shimbun/sb-muchy.el (shimbun-muchy-get-headers): Modify regexp
@@ -10,8 +15,8 @@
 	(shimbun-jpo-headers-1): Ditto.
 	Bug fixed.
 	(shimbun-jpo-headers-group-details): Use `dolist' to simplify code.
-	Use `w3m-expand-url' to	get full URL.
-	
+	Use `w3m-expand-url' to get full URL.
+
 2003-05-19  NAKAJIMA Mikio  <minakaji@namazu.org>
 
 	* shimbun/sb-jpo.el (shimbun-jpo-contents): Modify regexp to pick
